@startuml
skinparam classAttributeIconSize 0

package "View Layer" {
  class View {
    - controller: DisplayableController
  }
}

package "Controller Layer" {
  class DisplayableController
  class ViewManager
  class AgentManager
  class ScalaPathController
  class ScenarioManager
}

package "Model Layer" {
  class Agent
  class Planner
  class PlannerBuilder
  class Configuration
  class Scenario
  class Tile
  class Direction
  class Position
}


DisplayableController ..|> AgentManager
DisplayableController ..|> ScenarioManager
AgentManager --> Agent : manages
ScenarioManager --> Scenario : manages
Agent --> Plan : uses
Agent --> Position : has
Agent --> Tile : uses
PlannerBuilder --> Planner : builds
PlannerBuilder --> Configuration : configures
Planner --> Agent : creates
Planner --> Scenario : uses
Planner --> Direction : uses
Scenario --> Tile : contains
Tile --> Position : has
Planner --> Plan : returns

ScalaPathController ..|> DisplayableController
ScalaPathController ..|> ViewManager
ViewManager --> View : uses


@enduml